# ray-tracing-engine

./: .swp  CMakeLists.txt  README.md  cornell_box.cpp  cornell_box.h  main.cpp
assets/models/: lake.mtl  terrain.mtl
assets/shaders/: compile.bat  main.frag  main.frag.spv  main.rchit  main.rchit.spv  main.rgen  main.rgen.spv  main.rmiss  main.rmiss.spv  main.vert  main.vert.spv
estun/dependencies/imgui/: CMakeLists.txt
estun/dependencies/stbi/: CMakeLists.txt
estun/src/: estun.h
estun/src/core/: camera.h  core.h  log.cpp  log.h  window.cpp  window.h
estun/src/includes/: glm.h
estun/src/renderer/: common.h  compute_render.cpp  compute_render.h  context.cpp  context.h  device_memory.cpp  device_memory.h  graphics_render.cpp  graphics_render.h  model.cpp  model.h  ray_tracing_render.cpp  ray_tracing_render.h  renderer.h
estun/src/renderer/buffers/: buffer.cpp  buffer.h  storage_buffer.h  uniform_buffer.h  vertex.h
estun/src/renderer/context/: base_image.cpp  base_image.h  command_buffers.cpp  command_buffers.h  command_pool.cpp  command_pool.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_memory_barier.h  image_view.cpp  image_view.h  instance.cpp  instance.h  render_pass.cpp  (+14 more)
tmp/: dynamic_functions.cpp  dynamic_functions.h
tmp/OldAPI/: vulkan_command_buffers.cpp  vulkan_context.cpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_sets.cpp  vulkan_material.cpp  vulkan_material.h  vulkan_material_pool.cpp  vulkan_material_pool.h  vulkan_pipeline.cpp  vulkan_pipeline.h
tmp/glfw_window/: glfw_input.cpp  glfw_input.h  glfw_window.cpp  glfw_window.h
tmp/ray_tracing/: acceleration_structure_manager.cpp  acceleration_structure_manager.h  base_acceleration_structure.cpp  base_acceleration_structure.h  bottom_level_acceleration_structure.cpp  bottom_level_acceleration_structure.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h  ray_tracing_properties.cpp  ray_tracing_properties.h  shader_bilding_table.cpp  top_level_acceleration_structure.cpp  top_level_acceleration_structure.h
tmp/ray_tracing_tmp/: acceleration_structure_manager.cpp  acceleration_structure_manager.h  base_acceleration_structure.cpp  base_acceleration_structure.h  bottom_level_acceleration_structure.cpp  bottom_level_acceleration_structure.h  top_level_acceleration_structure.cpp  top_level_acceleration_structure.h
(+39 files in other folders)
